[Banner Plugin] Update z-index for header and nav to avoid hiding issues

--- a/src/core/public/chrome/ui/header/collapsible_nav_group_enabled.scss
+++ b/src/core/public/chrome/ui/header/collapsible_nav_group_enabled.scss
@@ -10,6 +10,7 @@ $iconWidth: 16px;
 .leftNavIsOpen-false.context-nav-wrapper {
   top: var(--global-banner-height, 0);
   height: calc(100% - var(--global-banner-height, 0));
+  z-index: 800;
 }
 
 .context-nav-wrapper {
